<resources>
    <string name="app_name">Who wants to be a millionaire</string>
    <string name="tvplay">Play</string>
    <string name="tvscores">Scores</string>
    <string name="tvsettings">Settings</string>
    <string name="about">Who wants to be a millionaire\n\n Guillermo Montilla\n guimonto@inf.upv.es\n\n Emilio Miguel \n\n 2018</string>
    <string name="name">Name: </string>
    <string name="help_settings">How many times can you ask for help?</string>
    <string name="enter_name">Enter your name</string>
    <string name="enter_friends_name">Enter your friends name</string>
    <string name="add_friend">Add friend: </string>
    <string name="label_information">Information</string>
    <string name="zero_help">0</string>
    <string name="one_help">1</string>
    <string name="two_help">2</string>
    <string name="three_help">3</string>
    <string name="play_for">Play for:</string>
    <string name="qt">Question:</string>
    <string name="delete_score">Are you sure you want to delete the score?</string>
    <string name="score_local">Local</string>
    <string name="score_friends">Friends</string>
    <string name="price0">0$</string>
    <string name="price100">100$</string>
    <string name="price200">200$</string>
    <string name="price300">300$</string>
    <string name="price500">500$</string>
    <string name="price1000">1000$</string>
    <string name="price2000">2000$</string>
    <string name="price4000">4000$</string>
    <string name="price8000">8000$</string>
    <string name="price16000">16000$</string>
    <string name="price32000">32000$</string>
    <string name="price64000">64000$</string>
    <string name="price125000">125000$</string>
    <string name="price250000">250000$</string>
    <string name="price500000">500000$</string>
    <string name="price1000000">1000000$</string>
    <string name="end_game">Congratulations, you win! </string>
    <string name="surrender">Are you sure you want to retire? </string>
    <string name="looser">You loose...</string>
</resources>
